# rnote-core

./: Cargo.toml
examples/: dev_windows_tokio.rs
src/: handle.rs  lib.rs  pad.rs
src/camera/: mod.rs
src/geometry/: angle.rs  mod.rs  point.rs  rect.rs  size.rs
src/measure/: mod.rs  pen_angle.rs  pressure.rs  trace_sample.rs
src/render/: mod.rs
src/render/polygon/: mod.rs  polygon.wgsl
src/strike/: mod.rs
src/unit/: mod.rs
src/unit/geometry/: rectangle.rs
src/unit/modifier/: mod.rs
src/unit/style/: color.rs
